--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Catbook</title>
+    <title>Art</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    
+    <center><div>
+        <img src="night.jpg" />
+        <h1>A Starry Night</h1>
+    </center></div>
 </body>
 </html>
