--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Art</title>
+    <title>Nabil's Art Gallery</title>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <center><div>
-        <img src="night.jpg" />
-        <h1>A Starry Night</h1>
-    </center></div>
+    <nav class="navContainer">
+        <h1 class="navTitle">Nabil's Art Gallery</h1>
+    </nav>
+    <div>
+        <center>
+            <img src="./images/starry_night.jpg" />
+            <h1>The Starry Night</h1>
+            <p>The Starry Night is an oil-on-canvas painting by the Dutch Post-Impressionist painter Vincent van Gogh. Painted in June 1889, it depicts the view from the east-facing window of his asylum room at Saint-Rémy-de-Provence, just before sunrise, with the addition of an imaginary village. It has been in the permanent collection of the Museum of Modern Art in New York City since 1941, acquired through the Lillie P. Bliss Bequest. Widely regarded as Van Gogh's magnum opus, The Starry Night is one of the most recognizable paintings in Western art.</p>
+        </center>
+    <hr>
+    </div>
+    <div>
+        <center>
+            <img src="./images/mona_lisa.jpg" />
+            <h1>Mona Lisa</h1>
+            <p>The Mona Lisa is a half-length portrait painting by Italian artist Leonardo da Vinci.<br>
+            Considered an archetypal masterpiece of the Italian Renaissance, it has been described as "the best known, the most visited, the most written about, the most sung about, the most parodied work of art in the world. The painting's novel qualities include the subject's enigmatic expression, monumentality of the composition, the subtle modelling of forms, and the atmospheric illusionism.</p>
+        </center>
+    <hr>
+    </div>
+    <div>
+        <center>
+            <img src="./images/creation_of_adam.jpg" />
+            <h1>The Creation of Adam</h1>
+            <p>The Creation of Adam is a fresco painting by Italian artist Michelangelo, which forms part of the Sistine Chapel's ceiling, painted c. 1508–1512. It illustrates the Biblical creation narrative from the Book of Genesis in which God gives life to Adam, the first man. The fresco is part of a complex iconographic scheme and is chronologically the fourth in the series of panels depicting episodes from Genesis.</p>
+        </center>
+    <hr>
+    </div>
+    <footer class="footerContainer">
+        <p>By: Nabil Khalil</p>
+    </footer>
 </body>
 </html>
