added a footer and About Me section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     </nav>
     <div>
         <center>
+            <img id="avatar" src="./images/me.jpg" />
+            <h1>About Me</h1>
+            <p>Hi</p>
+        </center>
+    <hr>
+    <div>
+        <center>
             <img src="./images/starry_night.jpg" />
             <h1>The Starry Night</h1>
             <p>The Starry Night is an oil-on-canvas painting by the Dutch Post-Impressionist painter Vincent van Gogh. Painted in June 1889, it depicts the view from the east-facing window of his asylum room at Saint-Rémy-de-Provence, just before sunrise, with the addition of an imaginary village. It has been in the permanent collection of the Museum of Modern Art in New York City since 1941, acquired through the Lillie P. Bliss Bequest. Widely regarded as Van Gogh's magnum opus, The Starry Night is one of the most recognizable paintings in Western art.</p>
@@ -31,10 +38,10 @@
             <h1>The Creation of Adam</h1>
             <p>The Creation of Adam is a fresco painting by Italian artist Michelangelo, which forms part of the Sistine Chapel's ceiling, painted c. 1508–1512. It illustrates the Biblical creation narrative from the Book of Genesis in which God gives life to Adam, the first man. The fresco is part of a complex iconographic scheme and is chronologically the fourth in the series of panels depicting episodes from Genesis.</p>
         </center>
-    <hr>
     </div>
     <footer class="footerContainer">
-        <p>By: Nabil Khalil</p>
+        <b><p style="color: var(--background);">By: Nabil Khalil</p></b>
+        <b><a href="emailto:nabilamirkhalil@gmail.com" align="right">Email me</a></b>
     </footer>
 </body>
 </html>
