--- a/Snake Game/index.html
+++ b/Snake Game/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <script src="./game.js" defer></script>
+    <script src="./snake.js" defer></script>
 </head>
 <body>
     <div id="game-board"></div>
